Height alignment fix in question page

--- a/src/pages/question/Question.css
+++ b/src/pages/question/Question.css
@@ -1,6 +1,7 @@
 .container {
   background-color: #f1f2f3;
   padding: 32px;
+  height: 100%;
 }
 
 .header__img {
